# ureka-server

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  chat_cli.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  unstructured.ipynb
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
data_collection/: README.md  README_create_subsets.md  README_robust_evaluation.md  batch_data_collection.py  (+10 more)
server/: .dockerignore  Dockerfile  main.py  pyproject.toml
server/models/: chat.py  chat_model.py  document.py  document_model.py  hint_model.py  project.py
server/prompts/: critique_prompt.txt  critique_revise.json  dean_prompt.txt  evaluate_user_response_prompt.txt  friend_asks_tag_question_prompt.txt  friend_misunderstands_prompt.txt  friend_understands_and_ends_debate_prompt.txt  genai_query_prompt.txt  generate_friend_question_prompt.txt  hint_generate_prompt.txt  hint_pre_retrieve_prompt.txt  hint_prompt.txt  hint_query_prompt.txt  lecture_summary_prompt.txt  moderator_intervenes_prompt.txt  pre_retrieve_prompt.txt  recommend_prompt.txt  revision_prompt.txt  simple_teacher_prompt.txt  suggestion_chat_prompt.txt  suggestion_lecture_prompt.txt  suggestion_prompt.txt  teacher_prompt.txt
server/repositories/: chat_store.py  document_store.py  documnet_store.py  project_store.py  vector_store.py
server/routers/: chat.py  document.py  hint.py  langgraph_chat.py  project.py  recommend.py  suggestions.py
server/services/: chat.py  debate_graph_service.py  decument_retrive.py  document.py  embedding.py  hint.py  langgraph_service.py  llm.py  project.py  prompt.py  recommend.py  suggestions.py  vector_store.py
server/tests/: conftest.py  test_chat.py  test_chroma_vectore_store.py  test_vector_store.py  test_vector_store_service.py
server/utils/: config.py  db.py
(+223 files in other folders)
