[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.14",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.34",
    "minio>=7.2.15",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.12.1",
    "pypdf>=5.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
]


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
