[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.1",
]


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
